# agent-soup

./: README.md
Multi-Agent-RAG-Template-main/: README.md  main.py  pinecone_swarm.py  requirements.txt
Multi-Agent-RAG-Template-main/docs/: patient_P000001.txt  patient_P000002.txt  patient_P000003.txt  patient_P000004.txt  patient_P000005.txt  patient_P000006.txt  patient_P000007.txt  patient_P000008.txt  patient_P000009.txt  patient_P000010.txt
Multi-Agent-RAG-Template-main/multi_agent_rag/: agents.py  fake_data_generator.py  memory.py  pinecone_wrapper.py
kaggle-polars-downloader/: .env.example  .gitignore  README.md  pyproject.toml
kaggle-polars-downloader/kaggle-polars-downloader/data/parquet/: line_item_counts.parquet
kaggle-polars-downloader/src/kaggle_polars_downloader/: __init__.py  csv_to_parquet.py  main.py
lenovo-traffic-app/: index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
react-agent/: app.py  requirements.txt
react-agent/agents/: graph.py  nodes.py  state.py
react-agent/scratch/: list_models.py  load_data.py
react-agent/tools/: sec_tools.py
